changed calender text for all POS using attributes
Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D637

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -512,4 +512,7 @@
     <attr name="icTypeCircleHotel" format="reference" />
 
     <attr name="icCheckoutCheckmarkDrawable" format="reference" />
+    <!--Add Calender POS Messages-->
+    <attr name="addToCalenderMessage" format="reference|string" />
+
 </resources>
