enabling usage of AAG label in itin screen
Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D638

--- a/project/res/values/ids.xml
+++ b/project/res/values/ids.xml
@@ -81,4 +81,7 @@
 
     <item name="ic_clear_edittext_aag" type="drawable"/>
 
+    <!-- AirAsiaGo itin label text -->
+    <item name="aag_itinerary" type="string"/>
+
 </resources>
