--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -177,6 +177,13 @@
         <item name="clearEditTextImage">@drawable/ic_clear_edittext_dark</item>
         <item name="icCheckoutCheckmarkDrawable">@drawable/ic_checkout_checkmark</item>
         <item name="addToCalenderMessage">@string/contact_phone_template</item>
+        <item name="sorryRoomsSoldOut">@string/sorry_rooms_sold_out</item>
+        <item name="passwordHint">@string/expedia_password_hint</item>
+        <item name="loadingAccount">@string/loading_expedia_account</item>
+        <item name="restrictedProfileLoginMessage">@string/restricted_profile_login_message</item>
+        <item name="tellAFriendSubject">@string/tell_a_friend_subject</item>
+        <item name="tellAFriendBody">@string/tell_a_friend_body</item>
+        <item name="dialogMessageLaunchMobileSite">@string/dialog_message_launch_expedia_mobile_site</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
