Calendar description for flights support and itinerary attribute
Summary: taken out the attribute for the share itinerary Expedia
branding,added share template strings for AAG, added
`addToCalendarMessage` in Launch theme

Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D650

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -529,4 +529,8 @@
     <attr name="restrictedProfileLoginMessage" format="reference|string" />
     <attr name="dialogMessageLaunchMobileSite" format="reference|string" />
 
+    <!-- calendar description for flight's itinerary and support-->
+    <attr name="calendarFlightDescItinerary" format="reference|string" />
+    <attr name="calendarFlightDescSupport" format="reference|string" />
+
 </resources>
