--- a/project/res/values/ids.xml
+++ b/project/res/values/ids.xml
@@ -88,4 +88,7 @@
     <item name="e3_error_checkout_booking_succeeded_with_errors_aag" type="string"/>
     <item name="e3_error_checkout_booking_succeeded_with_errors_tvly" type="string"/>
 
+    <!-- adding aag crossSell text and link to avoid errors in Expedia app compilation -->
+    <item name="share_template_long_ad_aag" type="string"/>
+
 </resources>
