--- a/project/src/airAsiaGo/res/values/colors.xml
+++ b/project/src/airAsiaGo/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="flight_list_progress_text_color">#333</color>
     <color name="action_bar_text_aag">#F5A337</color>
     <color name="login_text_aag">#333333</color>
-
+    <color name="flight_trip_color_aag">#F8A424</color>
+    <color name="flight_trip_price_aag">#E21E25</color>
 </resources>
