--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -29,6 +29,7 @@
     <!-- Flights colors -->
     <color name="plane_window_background">#CACACA</color>
     <color name="flight_trip">#0D6599</color>
+    <color name="flight_trip_price">#22599C</color>
     <color name="trip_info_text">#FEFEFE</color>
     <color name="airport_text">#607480</color>
     <color name="divider_grey">#DCDCDC</color>
