--- a/project/src/airAsiaGo/res/values/themes.xml
+++ b/project/src/airAsiaGo/res/values/themes.xml
@@ -82,6 +82,8 @@
         <item name="flightTripColor">@color/flight_trip_color_aag</item>
         <item name="flightPriceTextColor">@color/flight_trip_price_aag</item>
         <item name="icSuitCaseBaggage">@drawable/ic_suitcase_baggage_fee_aag</item>
+        <item name="calendarFlightDescItinerary">@string/calendar_flight_desc_itinerary_TEMPLATE_aag</item>
+        <item name="calendarFlightDescSupport">@string/calendar_flight_desc_support_TEMPLATE_aag</item>
     </style>
 
     <style name="FlightTheme" parent="@style/Theme.AirAsiaGo">
