--- a/project/src/airAsiaGo/res/values/themes.xml
+++ b/project/src/airAsiaGo/res/values/themes.xml
@@ -100,7 +100,7 @@
         <item name="numberPickerDownButtonStyle">@style/Widget.ImageButton.NumberPickerDownButton</item>
         <item name="numberPickerInputTextStyle">@style/Widget.EditText.NumberPickerInputText</item>
         <item name="numberPickerStyle">@style/Widget.NumberPicker</item>
-        <item name="android:logo" tools:targetApi="11">@drawable/ic_logo_flights</item>
+        <item name="android:logo">@drawable/ic_logo_flights_aag</item>
         <item name="android:actionBarStyle" tools:targetApi="11">@style/FlightActionBarAirAsiaGo</item>
         <item name="android:actionMenuTextColor" tools:targetApi="11">@color/action_bar_flight_text_color</item>
         <item name="android:actionModeCloseDrawable" tools:targetApi="11">@drawable/btn_navigation_cancel</item>
