--- a/project/src/main/res/values/ids.xml
+++ b/project/src/main/res/values/ids.xml
@@ -87,6 +87,7 @@
     <!-- adding aag and tvly checkout_booking_succeeded_with_errors string id, to avoid errors in Expedia app compilation -->
     <item name="e3_error_checkout_booking_succeeded_with_errors_aag" type="string"/>
     <item name="e3_error_checkout_booking_succeeded_with_errors_tvly" type="string"/>
+    <item name="ic_stat_aag" type="drawable"/>
 
     <!-- adding aag crossSell text and link to avoid errors in Expedia app compilation -->
     <item name="share_template_long_ad_aag" type="string"/>
