Changed action bar for Login Screen for All POS
Reviewers: brennan

Reviewed By: brennan

Subscribers: sugupta

Differential Revision: https://phabricator.mobiata.com/D659

--- a/project/src/main/res/values/attrs.xml
+++ b/project/src/main/res/values/attrs.xml
@@ -536,5 +536,7 @@
     <attr name="flightTripColor" format="reference|color" />
     <attr name="flightPriceTextColor" format="reference|color" />
     <attr name="icSuitCaseBaggage" format="reference" />
+    <attr name="flightLoginActionBarIcon" format="reference" />
+
 
 </resources>
