--- a/project/src/airAsiaGo/res/values/themes.xml
+++ b/project/src/airAsiaGo/res/values/themes.xml
@@ -84,6 +84,7 @@
         <item name="icSuitCaseBaggage">@drawable/ic_suitcase_baggage_fee_aag</item>
         <item name="calendarFlightDescItinerary">@string/calendar_flight_desc_itinerary_TEMPLATE_aag</item>
         <item name="calendarFlightDescSupport">@string/calendar_flight_desc_support_TEMPLATE_aag</item>
+        <item name="flightLoginActionBarIcon">@drawable/ic_logo_flights_aag</item>
     </style>
 
     <style name="FlightTheme" parent="@style/Theme.AirAsiaGo">
