--- a/project/src/main/res/layout/fragment_flight_details.xml
+++ b/project/src/main/res/layout/fragment_flight_details.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
@@ -31,8 +32,7 @@
 
     <!-- Payment and Baggage Fees Footer -->
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         android:id="@+id/fees_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
