--- a/project/src/main/res/layout/include_button_bar.xml
+++ b/project/src/main/res/layout/include_button_bar.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:mobiata="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/button_bar_layout"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
@@ -23,10 +23,10 @@
         android:paddingLeft="6dp"
         android:paddingTop="6dp"
         android:textColor="@android:color/white"
-        mobiata:maxTextSize="16sp"
-        mobiata:minTextSize="6sp" />
+        app:maxTextSize="16sp"
+        app:minTextSize="6sp" />
 
-    <Button xmlns:android="http://schemas.android.com/apk/res/android"
+    <Button
         android:id="@+id/search_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
