--- a/project/src/main/res/layout/include_flights_guest_button_bar.xml
+++ b/project/src/main/res/layout/include_flights_guest_button_bar.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:mobiata="http://schemas.android.com/apk/res-auto"
-              android:id="@+id/button_bar_layout"
-              android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:layout_above="@id/refinements_layout"
-              android:background="@drawable/bg_dark_transparent_bar"
-              android:clickable="true"
-              android:orientation="horizontal"
-              android:visibility="gone" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/button_bar_layout"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_above="@id/refinements_layout"
+    android:background="@drawable/bg_dark_transparent_bar"
+    android:clickable="true"
+    android:orientation="horizontal"
+    android:visibility="gone" >
 
-    <com.mobiata.android.widget.AutoResizeTextView
+    <com.expedia.bookings.widget.AutoResizeTextView
         android:id="@+id/refinement_info_text_view"
         android:layout_width="0dp"
         android:layout_height="fill_parent"
@@ -22,23 +22,23 @@
         android:paddingLeft="6dp"
         android:paddingTop="6dp"
         android:textColor="@android:color/white"
-        mobiata:maxTextSize="16sp"
-        mobiata:minTextSize="6sp" />
+        app:maxTextSize="16sp"
+        app:minTextSize="6sp" />
 
-    <Button xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/guest_done_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:background="@drawable/bg_actionbar_button"
-            android:drawableLeft="?attr/actionBarCheckMarkDrawable"
-            android:gravity="center_vertical"
-            android:paddingBottom="6dp"
-            android:paddingRight="6dp"
-            android:paddingTop="6dp"
-            android:text="@string/DONE"
-            android:textColor="?attr/actionBarButtonTextColor"
-            android:textSize="12dp"
-            android:textStyle="bold" />
+    <Button
+        android:id="@+id/guest_done_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/bg_actionbar_button"
+        android:drawableLeft="?attr/actionBarCheckMarkDrawable"
+        android:gravity="center_vertical"
+        android:paddingBottom="6dp"
+        android:paddingRight="6dp"
+        android:paddingTop="6dp"
+        android:text="@string/DONE"
+        android:textColor="?attr/actionBarButtonTextColor"
+        android:textSize="12dp"
+        android:textStyle="bold" />
 
 </LinearLayout>
