--- a/project/src/main/res/layout/snippet_map_hotel_info_window.xml
+++ b/project/src/main/res/layout/snippet_map_hotel_info_window.xml
@@ -16,7 +16,7 @@
             android:minWidth="320dp"
             android:orientation="horizontal" >
 
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
                 android:layout_weight="1"
