--- a/project/src/airAsiaGo/res/layout/include_hotel_search_progress_bar.xml
+++ b/project/src/airAsiaGo/res/layout/include_hotel_search_progress_bar.xml
@@ -6,7 +6,9 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_centerInParent="true"
-        android:padding="60dp"
+        android:paddingLeft="60dp"
+        android:paddingRight="60dp"
+        android:paddingBottom="120dp"
         android:src="@drawable/search_progress_static_img_aag" />
 
 </merge>
