--- a/project/src/main/res/layout-land/activity_itinerary.xml
+++ b/project/src/main/res/layout-land/activity_itinerary.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/itin_map_fragment"
-        android:name="com.expedia.bookings.fragment.ItineraryMapFragment"
+        android:name="com.expedia.bookings.fragment.ItinMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:tag="@string/tag_itinerary_map"
