--- a/project/src/main/res/layout/fragment_tablet_slide_to_purchase.xml
+++ b/project/src/main/res/layout/fragment_tablet_slide_to_purchase.xml
@@ -79,7 +79,7 @@
             <com.expedia.bookings.widget.SlideToWidgetJB
                 android:id="@+id/slide_to_purchase_widget"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="144dp"
                 android:layout_gravity="center_horizontal|top"
                 android:layout_marginTop="@dimen/slide_to_purchase_widget_margin_top"
                 app:sliderText="@string/slide_to_book_hotel"/>
