--- a/project/src/main/res/layout/widget_slide_to_jb.xml
+++ b/project/src/main/res/layout/widget_slide_to_jb.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+       android:layout_width="wrap_content"
+       android:layout_height="144dp"
        android:gravity="center_vertical">
 
     <ImageView
