--- a/project/src/main/res/layout/fragment_hotel_payment_creditcard.xml
+++ b/project/src/main/res/layout/fragment_hotel_payment_creditcard.xml
@@ -1,21 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true" >
+    android:orientation="vertical" >
 
-    <LinearLayout
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:fillViewport="true" >
+
+        <FrameLayout
+            style="@style/MarginPoint"
+            android:layout_height="wrap_content"
+            android:paddingBottom="8dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="8dp" >
+
+            <include
+                android:id="@+id/creditcard_section"
+                layout="@layout/section_hotel_edit_creditcard" />
+
+        </FrameLayout>
+
+    </ScrollView>
+
+    <com.expedia.bookings.widget.TextView
+        android:id="@+id/card_message"
         style="@style/MarginPoint"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="8dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="8dp" >
+        android:layout_weight="0"
+        android:bufferType="spannable"
+        android:gravity="center"
+        android:padding="16dp"
+        android:textColor="@color/flight_card_warning_text"
+        android:textSize="17sp"
+        android:visibility="gone" />
 
-        <include
-            android:id="@+id/creditcard_section"
-            layout="@layout/section_hotel_edit_creditcard" />
-    </LinearLayout>
-
-</ScrollView>
+</LinearLayout>
