Put common content description on Launch hotels & flights button in Expedia and Travelocity app. Now we can click on launch buttons by content descption instead of resource Ids and reuse our existing pagemodel for Travelocity automation.

--- a/project/src/travelocity/res/layout/fragment_phone_launch.xml
+++ b/project/src/travelocity/res/layout/fragment_phone_launch.xml
@@ -88,7 +88,8 @@
                 android:gravity="center"
                 android:paddingRight="50dp"
                 android:text="@string/nav_flights"
-                android:textSize="15dp" />
+                android:textSize="15dp"
+                android:contentDescription="@string/cd_launch_flights" />
 
 
             <TextView
@@ -98,7 +99,8 @@
                 android:drawableTop="@drawable/btn_tvly_hotels"
                 android:gravity="center"
                 android:text="@string/nav_hotels"
-                android:textSize="15dp" />
+                android:textSize="15dp"
+                android:contentDescription="@string/cd_launch_hotels" />
 
 
         </LinearLayout>
