--- a/project/src/main/res/values/donottranslate.xml
+++ b/project/src/main/res/values/donottranslate.xml
@@ -430,5 +430,6 @@
     <string name="cd_delete_btn">Delete</string>
     <!-- User name label for support email sent to user happiness team -->
     <string name="email_user_name">Expedia user name:</string>
-
+    <!-- App Support URL -->
+    <string name="app_support_url">http://www.mobiata.com/support/expedia-android</string>
 </resources>
