--- a/project/src/main/res/values/ids.xml
+++ b/project/src/main/res/values/ids.xml
@@ -68,5 +68,9 @@
 
     <!-- adding aag crossSell text and link to avoid errors in Expedia app compilation -->
     <item name="share_template_long_ad_aag" type="string"/>
+    <!-- App Support URL for AAG -->
+    <item name="app_support_url_aag" type="string"/>
+    <!-- App Support URL for VSC -->
+    <item name="app_support_url_vsc" type="string"/>
 
 </resources>
