--- a/project/src/travelocity/res/values/themes.xml
+++ b/project/src/travelocity/res/values/themes.xml
@@ -76,6 +76,7 @@
         <item name="dialogMessageLaunchMobileSite">@string/dialog_message_launch_tvly_mobile_site</item>
         <item name="calendarFlightDescItinerary">@string/calendar_flight_desc_itinerary_TEMPLATE_tvly</item>
         <item name="calendarFlightDescSupport">@string/calendar_flight_desc_support_TEMPLATE_tvly</item>
+        <item name="sorryRoomsSoldOutErrorMessage">@string/error_hotel_is_now_sold_out_tvly</item>
     </style>
 
     <style name="FlightTheme" parent="@style/Theme.Travelocity">
