--- a/project/src/main/res/layout/snippet_amenity.xml
+++ b/project/src/main/res/layout/snippet_amenity.xml
@@ -18,7 +18,9 @@
         android:id="@+id/label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:ellipsize="end"
         android:gravity="center_horizontal"
+        android:maxLines="2"
         android:shadowColor="@android:color/white"
         android:shadowDx="0"
         android:shadowDy="1"
