--- a/project/src/main/res/layout-port/snippet_trip_bucket_expanded_dates_view.xml
+++ b/project/src/main/res/layout-port/snippet_trip_bucket_expanded_dates_view.xml
@@ -22,7 +22,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/tablet_checkout_trip_bucket_expanded_padding_minor_y"
+        android:layout_marginBottom="17dp"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
 
@@ -49,10 +49,12 @@
             android:drawablePadding="8dp"
             android:ellipsize="end"
             android:gravity="center_vertical"
-            android:maxLines="1"
+            android:maxLines="2"
             android:textColor="#444444"
             android:textSize="14sp"
             app:textStyle="light" />
+
+
 
     </LinearLayout>
 
@@ -60,9 +62,33 @@
         android:id="@+id/room_and_bed_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/tablet_checkout_trip_bucket_expanded_padding_minor_y"
+        android:layout_marginBottom="10dp"
         android:ellipsize="end"
         android:maxLines="1"
+        android:textColor="#444444"
+        android:textSize="14sp"
+        android:visibility="gone"
+        app:textStyle="light" />
+
+    <com.expedia.bookings.widget.TextView
+        android:id="@+id/free_cancellation_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="17dp"
+        android:drawableLeft="@drawable/ic_tablet_checkout_free_cancellation_checkmark"
+        android:drawablePadding="8dp"
+        android:textColor="#444444"
+        android:textSize="14sp"
+        android:visibility="gone"
+        app:textStyle="light" />
+
+    <com.expedia.bookings.widget.TextView
+        android:id="@+id/price_guarantee_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="17dp"
+        android:drawableLeft="@drawable/ic_tablet_checkout_free_cancellation_checkmark"
+        android:drawablePadding="8dp"
         android:textColor="#444444"
         android:textSize="14sp"
         android:visibility="gone"
@@ -79,6 +105,8 @@
         android:background="@color/divider_grey" />
 
     <include
-        layout="@layout/snippet_trip_bucket_expanded_price" />
+        layout="@layout/snippet_trip_bucket_expanded_price"
+        />
+
 
 </LinearLayout>
