--- a/project/src/main/res/layout/row_tablet_room_rate.xml
+++ b/project/src/main/res/layout/row_tablet_room_rate.xml
@@ -75,6 +75,14 @@
                     android:id="@+id/room_rate_refundable_cancellation_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="#008c5d"
+                    android:textSize="16sp"
+                    app:textStyle="bold"/>
+
+                <com.expedia.bookings.widget.TextView
+                    android:id="@+id/room_rate_non_refundable_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:textColor="#666666"
                     android:textSize="16sp"
                     app:textStyle="bold"/>
