--- a/project/src/main/res/layout/snippet_trip_bucket_expanded_dates_view.xml
+++ b/project/src/main/res/layout/snippet_trip_bucket_expanded_dates_view.xml
@@ -10,7 +10,7 @@
         android:id="@+id/room_type_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="2dp"
         android:textColor="#444444"
         android:textSize="14sp"
         android:visibility="gone"
@@ -20,34 +20,93 @@
         android:id="@+id/bed_type_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/tablet_checkout_trip_bucket_expanded_padding_major_y"
+        android:layout_marginBottom="12dp"
         android:textColor="#444444"
         android:textSize="14sp"
         android:visibility="gone"
         app:textStyle="light" />
 
-    <com.expedia.bookings.widget.TextView
-        android:id="@+id/num_travelers_text_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/tablet_checkout_trip_bucket_expanded_padding_major_y"
-        android:drawableLeft="@drawable/ic_tablet_checkout_guest"
-        android:drawablePadding="8dp"
-        android:gravity="center_vertical"
-        android:textColor="#444444"
-        android:textSize="14sp"
-        app:textStyle="light" />
 
-    <com.expedia.bookings.widget.TextView
-        android:id="@+id/dates_text_view"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/num_travelers_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/tablet_checkout_trip_bucket_expanded_padding_x"
+            android:drawableLeft="@drawable/ic_tablet_checkout_guest"
+            android:drawablePadding="8dp"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:maxLines="1"
+            android:textColor="#444444"
+            android:textSize="14sp"
+            app:textStyle="light" />
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/dates_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/tablet_checkout_trip_bucket_expanded_padding_x"
+            android:drawableLeft="@drawable/ic_tablet_checkout_calendar"
+            android:drawablePadding="8dp"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:maxLines="1"
+            android:textColor="#444444"
+            android:textSize="14sp"
+            app:textStyle="light" />
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/tablet_checkout_trip_bucket_expanded_padding_minor_y"
-        android:drawableLeft="@drawable/ic_tablet_checkout_calendar"
-        android:drawablePadding="8dp"
-        android:textColor="#444444"
-        android:textSize="14sp"
-        app:textStyle="light" />
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/free_cancellation_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:drawableLeft="@drawable/ic_tablet_checkout_free_cancellation_checkmark"
+            android:drawablePadding="8dp"
+            android:textColor="#444444"
+            android:textSize="14sp"
+            android:visibility="gone"
+            app:textStyle="light" />
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/price_guarantee_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:drawableLeft="@drawable/ic_tablet_checkout_free_cancellation_checkmark"
+            android:drawablePadding="8dp"
+            android:textColor="#444444"
+            android:textSize="14sp"
+            android:visibility="gone"
+            app:textStyle="light" />
+
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/third_amenity_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:drawableLeft="@drawable/ic_tablet_checkout_free_cancellation_checkmark"
+            android:drawablePadding="8dp"
+            android:textColor="#444444"
+            android:textSize="14sp"
+            android:visibility="gone"
+            app:textStyle="light" />
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
