--- a/project/src/main/res/values/styles.xml
+++ b/project/src/main/res/values/styles.xml
@@ -913,6 +913,11 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="FreeCancellationTextAppearance">
+        <item name="android:textColor">#008c5d</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
     <style name="TripBucketBookButton">
         <item name="android:layout_width">@dimen/hotel_flight_card_width</item>
         <item name="android:layout_height">@dimen/tripbucket_bookbutton_height</item>
