--- a/project/src/main/res/values-sw600dp/dimens.xml
+++ b/project/src/main/res/values-sw600dp/dimens.xml
@@ -73,6 +73,9 @@
     <dimen name="calender_header_height">42dp</dimen>
     <dimen name="calender_month_advance_padding">10dp</dimen>
 
+    <!-- Hotel Results Selected Checkmark Margin -->
+    <dimen name="tablet_hotel_selected_checkmark_margin">18dp</dimen>
+
     <!-- GridManager numbers for Search Results screen -->
     <fraction name="results_grid_bottom_half">54%</fraction>
 
