--- a/project/src/main/res/values-sw720dp/dimens.xml
+++ b/project/src/main/res/values-sw720dp/dimens.xml
@@ -36,6 +36,7 @@
     <!-- Account / Login button -->
     <dimen name="account_button_padding">10dp</dimen>
     <dimen name="login_button_text_size">18sp</dimen>
+    <dimen name="account_button_rewards_text_size">20sp</dimen>
     <dimen name="card_icon_padding">12dp</dimen>
     <dimen name="wallet_button_bottom_margin">8dp</dimen>
 
